# just_a_poker_game

./: .gitignore  CLAUDE.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
just_a_poker_game/: __init__.py  __main__.py  game.py
just_a_poker_game/ai/: __init__.py  basic_ai.py
just_a_poker_game/engine/: __init__.py  card.py  game_state.py  hand_evaluator.py
just_a_poker_game/player/: __init__.py  player.py
just_a_poker_game/storage/: __init__.py  game_storage.py
just_a_poker_game/ui/: __init__.py  terminal_ui.py
tests/: __init__.py  test_card.py  test_hand_evaluator.py
